--- a/content/post/20190830_3.md
+++ b/content/post/20190830_3.md
@@ -11,7 +11,7 @@ draft: false
 >*造圆觉以济幽魂，礼祖师以求名悟。*  
 >&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;*——无学祖元《佛光国师语录》*
 
-![](/img/post/20190830_3_1.png)
+![](/images/post/20190830_3_1.png)
 
 当选择日本进入游戏时，大家第一眼看到的是熟悉的家名“北条“和“三鳞“家纹。而文明前代中日本的领袖都是日本战国时期著名的大名德川家康或织田信长，那这一代的北条时宗会不会是战国时北条家的某位当主呢？  
 
@@ -23,7 +23,7 @@ draft: false
 
 **在日本历史上真正赫赫有名的北条家又是怎样的呢？**
 
-![](/img/post/20190830_3_2.png)
+![](/images/post/20190830_3_2.png)
 
 我曾在镰仓住过将近一年，每每在海边徘徊，身后不到五万人的小城中林立古寺、古神社，浓厚的历史气息让人倾倒。平安时代末期，著名的源平合战爆发，源赖朝击败平清盛，正是在镰仓开设了幕府，而其头号功臣则是他的岳父——北条时政。在此之后，北条时政出任幕府的“执政”，开创了北条家显赫的历史。  
 
@@ -38,7 +38,7 @@ draft: false
 如果从JR横须贺线的镰仓站下车，一路沿着开满樱花的参道前行便是日本最大的八幡宫——鹤岗八幡宫。  
 而在其背后是镰仓的名山“瑞鹿山”，北条时宗就长眠在山中的圆觉寺内。
 
-![](/img/post/20190830_3_3.png)
+![](/images/post/20190830_3_3.png)
 
 本文的主角北条时宗是镰仓幕府第八代的执权，在位16年（1268-1284）。  
 
@@ -54,7 +54,7 @@ draft: false
 1274年，忽必烈令高丽造船900余艘，组成了当时世界上最大的舰队，共计3万人的大军远征日本。元军先是登陆了高丽和日本之间的对马岛，消灭了上面的所有驻军（btw：即将发售的《对马之魂》就是以这段历史为背景，有兴趣的玩家可以关注）。之后元军登陆九州，与幕府军进行了对决，日军虽不敌，但元军也因为后援不足而决定暂行撤回船上。此时突然刮起了台风，摧毁了元军大部分船只，一夜之间损失了万余人，余部也只能逃回了中国。  
 
 
-![《对马之魂》计划于2018年12月发售，平台PS4。希望不要跳票。](/img/post/20190830_3_4.png)
+![《对马之魂》计划于2018年12月发售，平台PS4。希望不要跳票。](/imges/post/20190830_3_4.png)
 
 1281年，不死心的忽必烈再次发兵日本，此次规模更为庞大。  
 这时的蒙古已经消灭了南宋，整合了原宋军的江南军10万人后，派兵总人数达到了20万。  
@@ -84,7 +84,7 @@ draft: false
 
 北条时宗开启的崇佛之风，依然影响着今天的镰仓。
 
-![](/img/post/20190830_3_5.png)
+![](/images/post/20190830_3_5.png)
 
 乘坐默默运行了一百多年的江之电到长谷站下车，便是著名的“镰仓大佛“高德院的所在地，而除此之外，市内还现存着数十座佛寺，其中就有前文提到的圆觉寺。  
 寺中如今还供奉着当年战死的日本武士和元军武士的灵位，同时也依然是日本僧人修行的场所。  
