--- a/content/post/20190830_4.md
+++ b/content/post/20190830_4.md
@@ -8,12 +8,12 @@ draft: false
 
 就在这一年1月6日，山梨县甲府地方裁判所收到了来自一位名叫清水伦茂的男子提诉铁道院的诉状，殊不知，一场长达8年的漫长诉讼就此展开，这一案例也在日本法律史上留下了浓墨重彩的一笔。
 
-![](/img/post/20190830_4_1.jpg)
+![](/images/post/20190830_4_1.jpg)
 
 清水伦茂，山梨县北巨摩郡甲村人，据传是一个率直而热血、崇尚自由之风的人物。  
 明治维新之后，他当选为甲村村议员，后又成为了甲村的副村长。33岁就当选为甲村的村长，之后更当选为北巨摩郡议员，并且是甲斐銀行行长，可以说是当地响当当的人物。
 
-![](/img/post/20190830_4_2.jpg)
+![](/images/post/20190830_4_2.jpg)
 
 然而在大正年间的日本，虽然民主人权自由的讨论已经被搬上了台面，但是在国家新生阶段，人们普遍认为 “国家不会作恶”，特别是作为文明进步建设者的铁道院更是受到国民的追崇。  
 在国家机器面前，个人的权益往往都被忽略不计，甚至在建设铁道过程中出现的伤人等事件，往往也都是不了了之。就算是拥有如此的地位，以一人之力向国家机关提起诉讼也是十分罕见的事情。  
@@ -24,14 +24,14 @@ draft: false
 传说在战国时，武田信玄曾将风林火山旗挂在松树上，因此被当地人称作“信玄公旗挂松”。  
 而在三年前，挂旗松枯死了。
 
-![](/img/post/20190830_4_3.jpg)
+![](/images/post/20190830_4_3.jpg)
 
 
 对于松树的死因，清水伦茂认定是铁道院在树旁铺设了铁路所致——每日驶过的蒸汽机车的烟雾和地面的震动导致了这棵树的枯死。  
 此事的伏笔早在15年前就已经埋下。  
 清水的说法并非空穴来风。15年前的1902年，开始近代化建设的日本大兴土木，在各地规划铺设铁道，而在“信玄公旗挂松”附近将要修建的是日野春站。虽然火车被认为是文明开化之物，但是在得知这棵古松附近即将修筑铁路时，清水对于蒸汽机车的煤烟可能会影响到古树的情况也十分忧心。于是他在5月6日给“铁道作业局八王子出张所所长”写了一封陈情信，阐述了他对于这条线路之后会对古树不利的忧虑，并提出了铁路线改道的设计图。
 
-![](/img/post/20190830_4_4.jpg)
+![](/images/post/20190830_4_4.jpg)
 
 
 然而一个多月后的6月23日，他收到了铁道院的回信，称在规划此线路的时候，事前已经考虑到了古松的情况，铁路的修建与运行并不会对树产生影响。
@@ -81,7 +81,7 @@ draft: false
 >+ 不法行为成立的条件在于行为者有所过失，即未曾对后果采取防御措施。此案中，铁路院并未对煤烟的影响设置任何的防御设置。
 >+ 在行使权利时，必须要在适当的，不侵害他人的权利范围内。
 
-![](/img/post/20190830_4_5.jpg)
+![](/images/post/20190830_4_5.jpg)
 
 
 至此这次诉讼的胜负已分。
@@ -121,7 +121,7 @@ draft: false
 >*法之所認也*  
 >*這般碑建樹跡伝後世*  
 
-![](/img/post/20190830_4_6.jpg)
+![](/images/post/20190830_4_6.jpg)
 
 
 3年之后，清水去世。又过了10年，藤卷嘉一郎也撒手人寰。但是记录了这一事件的石碑则成为了新的历史标记。  
