--- a/content/post/20190830_4.md
+++ b/content/post/20190830_4.md
@@ -54,12 +54,16 @@ draft: false
 这场诉讼历时长达8年，历经了8次判决，从甲府地方裁判所一直打到大审院（即最高法院），分别是：
 
 1.**甲府地方裁判所（1916-1918）**  
-清水伦茂和藤卷嘉一郎提出的诉状中，主张三点：1）铁道院应对古松的枯死负全责；2）铁道院支付给原告赔偿金1200元；3）所有诉讼费用由铁道院承担。
+清水伦茂和藤卷嘉一郎提出的诉状中，主张三点：  
+1. 铁道院应对古松的枯死负全责；  
+2. 铁道院支付给原告赔偿金1200元；  
+3. 所有诉讼费用由铁道院承担。
+
 这里的索赔金额比起之前清水的求偿减少了一半，原因是律师藤卷对于古松的来历和赔偿金计算方式也是不甚明了。
 
 而铁道院则主张：
-1) 火车运行使用煤炭，必然会产生煤烟，所以这是正常行使其经营权并无不妥；
-2) 古松的枯死只是自然死亡。
+1. 火车运行使用煤炭，必然会产生煤烟，所以这是正常行使其经营权并无不妥；  
+2. 古松的枯死只是自然死亡。
 
 经过了两次辩论之后，1918年1月31日，甲府地方裁判所做出了裁决，判定清水伦茂胜诉，宣判称古松枯死责任在于铁道院，而具体的赔偿金额之后再做判决。
 在甲府地方裁判所的判决书提到：虽然在铁路上行驶火车是铁道经营者的正当权利，在行使此权利的同时产生煤烟也是必然的结果，但是这一行为侵害到了他人的利益，“导致古松枯死”一事则是超越了权利的行使权利的行为。这也是日本历史上第一次提到了"权利滥用论"。
@@ -107,7 +111,8 @@ draft: false
 但是1924年12月25日，清水的申诉被驳回。
 
 8.**甲府地方裁判所(1925)**  
-1925年9月28日，甲府地方裁判所裁定清水需要承担诉讼费用241元71钱2厘5毛中的9成，而清水也最终接受了这一结果。漫长的诉讼过程就此结束。
+1925年9月28日，甲府地方裁判所裁定清水需要承担诉讼费用241元71钱2厘5毛中的9成，而清水也最终接受了这一结果。漫长的诉讼过程就此结束。  
+
 虽然这一场诉讼最后清水名胜实败，但在那个当权者和国家机器不被追责、政府力量巨大、军部独裁势力慢慢抬头的时代，本案对国家权力机关作出败诉决定的判决，以及在“权力滥用”上开创的日本先例上，使其成为日本法律史上里程碑的事件，也是近代日本在法律现代化上迈出的重要一步。
 
 随着法律的发展，“权利滥用”在民法乃至宪法中都已成为明文条款。日本国宪法中就规定“国民不得滥用自由和权利，需肩负公共福祉的责任”；民法中也规定“不可滥用权利”，刑法中更是规定公务员若滥用职权，要负刑事责任等；商法，民事诉讼法，刑事诉讼法中更是也有相关的规定。
