--- a/content/post/20190831_1.md
+++ b/content/post/20190831_1.md
@@ -29,10 +29,10 @@ draft: false
 针对这一诉讼，原告主张：
 >使用NBDATA修改武将数值破坏了游戏的平衡性，使玩家的行为超过了游戏的设定范围，侵害了游戏思想和情感的同一性；
 
-被告则认为：
->1. NBDATA并未修改游戏本体，而游戏中武将的数值也是随着游戏的进行而发生变化，所以NBDATA对其进行修改是可以被接受的；
->2. 游戏本身并未禁止超越上限的数值，所以这种修改也是在游戏本体的允许范围内；
->3. 使用NBDATA的用户其主要目的是为了修正新武将登录时的操作不便，而是否修改武将数值超过上限是使用者的自主意愿。
+被告则认为：  
+1. NBDATA并未修改游戏本体，而游戏中武将的数值也是随着游戏的进行而发生变化，所以NBDATA对其进行修改是可以被接受的；  
+2. 游戏本身并未禁止超越上限的数值，所以这种修改也是在游戏本体的允许范围内；  
+3. 使用NBDATA的用户其主要目的是为了修正新武将登录时的操作不便，而是否修改武将数值超过上限是使用者的自主意愿。  
 
 裁判所于1995年进行了裁决，也是我认为是对计算机行业理解甚深的法官做出的精彩判决：
 
@@ -43,9 +43,10 @@ draft: false
 光荣并没有那么容易死心，随即向东京高等裁判所提起了上诉。在上诉中，追加了一个新的主张：
 游戏应该比照著作权中的电影，NBDATA修改数值超上限之后，导致游戏在异常的情况下进行，改变了剧情的走向。而在此之前的1984年，《吃豆人》就成功被认定为等同于电影的著作物（这段历史之后再详细道来）。光荣这次上诉可谓来势汹汹。
 
-然而，1999年，东京高等裁判所驳回了光荣的上诉。理由是：
->1. 《三国志III》是以玩家的决策为主要推进方式，与电影的动画播放为主的方式完全不同
->2. 游戏中的动画很少，画面几乎全部是静态画像。
+然而，1999年，东京高等裁判所驳回了光荣的上诉。理由是：  
+
+ 1. 《三国志III》是以玩家的决策为主要推进方式，与电影的动画播放为主的方式完全不同  
+ 2. 游戏中的动画很少，画面几乎全部是静态画像。  
 
 于是在这场争论中，光荣完败。
 
@@ -57,11 +58,11 @@ draft: false
 
 1996年一家名为GameTech的公司发行了一本名为《X-TERMINATOR PS版 第2号 心跳回忆专刊》的攻略本，其中附带了一张包含了各种IMBA存档的记忆卡：有主角数值全满存档，有藤崎表白事件前的存档等。
 这种对于中国玩家来说习以为常的游戏存档分享，在日本当时引起Konami的强烈反弹，一纸诉状将GameTech告上了大阪地方裁判所。
-针对Konami的诉讼，GameTech的论点基本上与技术评论社类似：
+针对Konami的诉讼，GameTech的论点基本上与技术评论社类似：  
 
->1. 修改存档并未修改游戏本体
->2. 修改存档并未损坏游戏程序
->3. 游戏本身是根据玩家行为来推进，不能等同于电影
+1. 修改存档并未修改游戏本体  
+2. 修改存档并未损坏游戏程序  
+3. 游戏本身是根据玩家行为来推进，不能等同于电影  
 
 1997年，大阪地方裁判所做出了判决，驳回了konami的诉求，其中接受了GameTech的前两点主张，但是，裁判所却认同了“《心跳回忆》等同于电影”这一主张，可以适用电影的著作权。理由是：
 
@@ -69,10 +70,10 @@ draft: false
 
 在关键性论点得到裁判所支持之后，Konami上诉到了大阪高等裁判所。
 
-1999年，大阪高等裁判所做出了裁定，认为：
->1. 《心跳回忆》是将很多故事根据玩家的选择等进行乱序组合播放，可以视作等同于电影的著作物。
->2. 修改器导致玩家可以短时间内获取多数女生的告白，而在原有设定中，这种数值是无法达成的，所以侵害了游戏的同一性。而游戏中的隐藏秘籍是要求玩家取名为“konami心回”，这样做的目的是有意减少玩家的代入感，游戏修改器则回避了这一点。
->3. 游戏的故事主线是“平凡的主角在高校中努力”的故事，而修改器破坏了这一点，同时也破坏了原设定中女生出场的时机，更是导致了大量剧情无法被触发。
+1999年，大阪高等裁判所做出了裁定，认为：  
+1. 《心跳回忆》是将很多故事根据玩家的选择等进行乱序组合播放，可以视作等同于电影的著作物。
+2. 修改器导致玩家可以短时间内获取多数女生的告白，而在原有设定中，这种数值是无法达成的，所以侵害了游戏的同一性。而游戏中的隐藏秘籍是要求玩家取名为“konami心回”，这样做的目的是有意减少玩家的代入感，游戏修改器则回避了这一点。
+3. 游戏的故事主线是“平凡的主角在高校中努力”的故事，而修改器破坏了这一点，同时也破坏了原设定中女生出场的时机，更是导致了大量剧情无法被触发。
 
 *（以上的认定都是出自判决书原文，看上去非常萌）*
 
@@ -82,8 +83,8 @@ draft: false
 
 ![](/images/post/20190831_1_4.jpg)
 
-这两场出发点一致但是结果完全不同的案件，不仅对游戏界，对日本的法学界也产生了深远的影响。由于《三国志III》事件中的判决，之后个人对于游戏进行修改的行为被认为是合法的（不过近年来对于著作权保护的呼声越来越高，以及《伯尔尼保护文学和艺术作品公约》的压力，对于作品的“名誉、声望有所损害的修改”也成为了检讨对象，对此，目前现行的《著作权法》也在进一步的讨论中）
+这两场出发点一致但是结果完全不同的案件，不仅对游戏界，对日本的法学界也产生了深远的影响。由于《三国志III》事件中的判决，之后个人对于游戏进行修改的行为被认为是合法的（不过近年来对于著作权保护的呼声越来越高，以及《伯尔尼保护文学和艺术作品公约》的压力，对于作品的“名誉、声望有所损害的修改”也成为了检讨对象，对此，目前现行的《著作权法》也在进一步的讨论中）  
 
-恋爱养成游戏的《心跳回忆》，因为是以故事作为主要内容的游戏本体，在此案中成功被认定为电影，这一点也是非常有趣。
+恋爱养成游戏的《心跳回忆》，因为是以故事作为主要内容的游戏本体，在此案中成功被认定为电影，这一点也是非常有趣。  
 
 不过，以策略为主要玩法的《三国志III》虽并未得到认可，但是对于光荣来说并不是坏事。塞翁失马焉知非福，这一事件直接促使了光荣从《三国志IV》开始发售如今玩家熟悉的PK版，内置了修改数值的功能，于是一款游戏搂两拨钱的商业模式就此开始了。
