--- a/content/post/20190831_1.md
+++ b/content/post/20190831_1.md
@@ -20,7 +20,7 @@ draft: false
 这两款作品在游戏历史上都赫赫有名，但是很少有人知道的是，这两款名作都曾因为游戏修改权的争端而卷入过官司之中。
 
 
-## 《三国志III》事件  
+### 《三国志III》事件  
 
 在《三国志III》发售之后的1993年2月，一家名为“技术评论社”的出版社发行了一本非官方的《三国志III攻略本》，其中收录了一张名为“NBDATA”的软盘，其中包含了《三国志III》的修改器，可以把游戏中自行登录的新武将数值修改到突破上限的100以上。
 
