--- a/content/post/20190830_4.md
+++ b/content/post/20190830_4.md
@@ -55,15 +55,17 @@ draft: false
 
 1.**甲府地方裁判所（1916-1918）**  
 清水伦茂和藤卷嘉一郎提出的诉状中，主张三点：  
-1. 铁道院应对古松的枯死负全责；  
-2. 铁道院支付给原告赔偿金1200元；  
-3. 所有诉讼费用由铁道院承担。
+
+>1. 铁道院应对古松的枯死负全责；  
+>2. 铁道院支付给原告赔偿金1200元；  
+>3. 所有诉讼费用由铁道院承担。
 
 这里的索赔金额比起之前清水的求偿减少了一半，原因是律师藤卷对于古松的来历和赔偿金计算方式也是不甚明了。
 
-而铁道院则主张：
-1. 火车运行使用煤炭，必然会产生煤烟，所以这是正常行使其经营权并无不妥；  
-2. 古松的枯死只是自然死亡。
+而铁道院则主张：  
+
+>1. 火车运行使用煤炭，必然会产生煤烟，所以这是正常行使其经营权并无不妥；  
+>2. 古松的枯死只是自然死亡。
 
 经过了两次辩论之后，1918年1月31日，甲府地方裁判所做出了裁决，判定清水伦茂胜诉，宣判称古松枯死责任在于铁道院，而具体的赔偿金额之后再做判决。
 在甲府地方裁判所的判决书提到：虽然在铁路上行驶火车是铁道经营者的正当权利，在行使此权利的同时产生煤烟也是必然的结果，但是这一行为侵害到了他人的利益，“导致古松枯死”一事则是超越了权利的行使权利的行为。这也是日本历史上第一次提到了"权利滥用论"。
