--- a/content/post/20190831_1.md
+++ b/content/post/20190831_1.md
@@ -20,7 +20,7 @@ draft: false
 这两款作品在游戏历史上都赫赫有名，但是很少有人知道的是，这两款名作都曾因为游戏修改权的争端而卷入过官司之中。
 
 
-### 《三国志III》事件  
+## 《三国志III》事件  
 
 在《三国志III》发售之后的1993年2月，一家名为“技术评论社”的出版社发行了一本非官方的《三国志III攻略本》，其中收录了一张名为“NBDATA”的软盘，其中包含了《三国志III》的修改器，可以把游戏中自行登录的新武将数值修改到突破上限的100以上。
 
@@ -54,7 +54,7 @@ draft: false
 
 几乎是同时，在大阪，《心跳回忆》也卷进了游戏修改权的争论中。
 
-### 《心跳回忆》事件
+## 《心跳回忆》事件
 
 1996年一家名为GameTech的公司发行了一本名为《X-TERMINATOR PS版 第2号 心跳回忆专刊》的攻略本，其中附带了一张包含了各种IMBA存档的记忆卡：有主角数值全满存档，有藤崎表白事件前的存档等。
 这种对于中国玩家来说习以为常的游戏存档分享，在日本当时引起Konami的强烈反弹，一纸诉状将GameTech告上了大阪地方裁判所。
