--- a/content/post/20190830_1.md
+++ b/content/post/20190830_1.md
@@ -8,6 +8,8 @@ draft: false
 
 Unity中点击触发一个和点击坐标相关的事件，但是允许玩家多个手指进行触控，坐标只和最近的一个点击的坐标相关。 
 
+<!--more-->
+
 ## 思考
 
 最开始以为可以用Input.touches数组来判断，结果这个数组并不有序。    
