--- a/content/post/20190830_2.md
+++ b/content/post/20190830_2.md
@@ -4,6 +4,7 @@ date: 2019-08-30T13:27:25+08:00
 draft: false
 ---
 **表紙（ひょうし）** &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;封面  
+<!--more-->
 **背（せ）** &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;书脊  
 **方眼線（ほうがんせん）** &ensp;&ensp;&ensp;网格线  
 **章（しょう）** &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;章节  
