--- a/content/post/20190830_4.md
+++ b/content/post/20190830_4.md
@@ -6,6 +6,8 @@ draft: false
 
 公元1917年，日本大正6年，刚刚经历了明治维新重生的这个古老国度，正作为近代文明的新生儿蹒跚前进。  
 
+<!--more-->
+
 就在这一年1月6日，山梨县甲府地方裁判所收到了来自一位名叫清水伦茂的男子提诉铁道院的诉状，殊不知，一场长达8年的漫长诉讼就此展开，这一案例也在日本法律史上留下了浓墨重彩的一笔。
 
 ![](/images/post/20190830_4_1.jpg)
