--- a/content/post/20190830_1.md
+++ b/content/post/20190830_1.md
@@ -5,11 +5,15 @@ date: 2019-08-30T11:27:43+08:00
 draft: false
 ---
 
+Touch过程中发现的一个问题总结
+
+<!--more-->
+
 ## 需求
 
 Unity中点击触发一个和点击坐标相关的事件，但是允许玩家多个手指进行触控，坐标只和最近的一个点击的坐标相关。 
 
-<!--more-->
+
 
 ## 思考
 
