--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -14,8 +14,9 @@ draft: false
 
 **墙内**  
 
-<iframe height=480 width=640 src='//player.bilibili.com/player.html?aid=65059112&cid=112923555&page=1' frameborder=0 'allowfullscreen'></iframe>
-
+<div class="aspect-ratio">
+    <iframe src="//player.bilibili.com/player.html?aid=65059112&cid=112923555&page=1" scrolling="yes" border="0" frameborder="no" framespacing="1" allowfullscreen="true"></iframe>
+</div>
 
 **墙外**  
 TODO
