--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -15,7 +15,7 @@ draft: false
 **墙内**  
 
 <div class="aspect-ratio">
-    <iframe src="//player.bilibili.com/player.html?aid=65059112&cid=112923555&page=1" scrolling="yes" border="0" frameborder="no" framespacing="1" allowfullscreen="true"></iframe>
+    <iframe src="//player.bilibili.com/player.html?aid=65059112&cid=112923555&page=1" scrolling="yes" border="0" frameborder="yes" framespacing="1" allowfullscreen="true"></iframe>
 </div>
 
 **墙外**  
