--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -14,8 +14,14 @@ draft: false
 
 **墙内**  
 
-<div class="aspect-ratio">
-    <iframe src="//player.bilibili.com/player.html?aid=65059112&cid=112923555&page=1" scrolling="yes" border="0" frameborder="yes" framespacing="1" allowfullscreen="true"></iframe>
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 75%;">
+  <iframe src="//player.bilibili.com/player.html?aid=65059112&cid=112923555&page=1" 
+          scrolling="no" 
+          border="0" 
+          frameborder="no" 
+          framespacing="0" 
+          allowfullscreen="true" 
+          style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;"> </iframe>
 </div>
 
 **墙外**  
@@ -51,7 +57,7 @@ TODO
 
 不过因为对日本的爱好，脑洞之后延伸到了日本童话。  
 我小时候，中日两国还处于“一衣带水”的友好时期，大量引入了日本漫画、童话等。  
-*《桃太郎》*、*《开花爷爷》*、*《竹取物语》*、*《一寸法师》* 等等都是我小时候的读物。
+ *《桃太郎》* 、 *《开花爷爷》* 、 *《竹取物语》* 、 *《一寸法师》* 等等都是我小时候的读物。
 
 然而我又发现现在很多人却并没有读过这些故事，当时表示震惊的我想要将这些故事再次传播开。
 于是想到制作《桃太郎》的横版游戏，但是情节不那么黑暗而是符合原著的感觉
