--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -5,11 +5,14 @@ date: 2019-09-01T18:44:54+08:00
 draft: false
 ---
 
-这是一篇伪装成复盘分享文章的硬广。
+这是一系列伪装成复盘分享文章的硬广。
 
 <!--more-->
 
 废话不多说先上trailer
+
+**墙外**  
+{{< youtube px55icn-K_k >}}
 
 
 **墙内**  
@@ -24,10 +27,8 @@ draft: false
           style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;"> </iframe>
 </div>
 
-**墙外**  
-{{< youtube px55icn-K_k >}}
 
-一眼就可以看出这是个 **“复古ASCII字符风赛博朋克平台跳跃射击游戏”** orz
+“一眼”就可以看出这是个 **“复古ASCII字符风赛博朋克平台跳跃射击游戏”** orz
 
 剧情讲述个996到崩溃边缘的程序员，恍惚中进入梦乡（上班睡觉罪该万死），化作一个绿色的光标，并得到许诺称只要找到代码里面的4个bug就可以下班回家的故事。
 
@@ -70,26 +71,60 @@ draft: false
 
 但是事情不能就此block住。  
 
+**先分析问题：**  
+目的是把美术成本压倒最低，换句话说就是制作一个画面简单但功能齐全的游戏，
+
+**怎样的画面是简单但是可接受的呢？** 
+最开始想像素风，但是像素艺术其实比想象中更难，我的美术能力感觉真是令人发指。
+简笔画的风格也有考虑过，脑洞也开到过模拟一个上课的桌面世界，笔记本上的简笔画世界，不过这个想法也被抛弃了。
+
+有一天突然想到了做ASCII字符风格。用单纯的字符拼成表情，这是我最开始上网时候就接触到的形式，也是第一代的emoji。
+至于拿字符拼成各个怪物什么的对我来说还是可以制作的，基本上都是纯脑洞的过程。
+
+例如：
+
+*小坦克*  
+
+
+
+那么方向就定下来了。
+
+现在回头看这段，其实属于一个大坑。之后在美术方面折腾了巨大的时间。
+扯了上面那么多，最终结果其实也只是一个programmer art而已
+这里可以顺便回答一个问题：为什么不找专业美术。
+
+首先，我太抠门
+其次，在整体框架没有完成之前，并不敢投入成本
+
+经过这次之后，这应该是我最后一个自己做美术的游戏了……（喂，话不要说得太死~~）
+
 ### Switch
 
+上NS平台的考量主要有两个：  
 
-可以看到原因都是非常市侩的成本，实现，收益考量，这和我一直对于创作的信念有关：
+1. 现在各游戏平台环境恶化的比想象中厉害的多。Appstore, googleplay这种已经沦为垃圾市场的平台自不用说，steam目前也恶化的差不多了。基本上快沦为国内手游的拼投钱刷量的纯数字游戏了，于是基本想法是能上的平台尽量上。Switch目前还是一个新的平台，外加老任门槛限制的厉害，环境相对好一些（能好多久……）
+
+2. 就是准入，这里要多谢FantasyDR同学帮忙发行到Switch，不然以我个人之力和这个游戏的质量是不敢想象的，纯卖脸，多谢多谢~~
+
+
+以上可以看到原因都是非常市侩的成本，实现，收益考量，这和我一直对于创作的信念有关：
 “如果创作不是为了收益，那么和嫖娼没有区别——不过是花钱买个爽而已”
+
 
 ## DEMO诞生
 制作DEMO主要是验证想法和看下实现难度为主。
 整个过程不长，大约两周左右就制作出来了第一个版本:
 
+
+
 制作过程中，除了把内容制作出来，还边考虑了几个问题，之后的项目前期基本上都是在解决这些问题。
 而最后的成品其实和DEMO已经完全不同
 
-
-## 项目预备  
 在DEMO制作时，我就已经在考虑之后要解决的问题，暂且称作“项目预备”吧。不过这些问题都充满了技术臭い，都是以完成项目为导向，这个虽然保证了项目之后的推进顺利，但是也埋下了缺乏polish的坑……
 
+之后也就进入了项目前期研发阶段。
 
-
-项目就此正式开始...
+これから、项目正式开始...
 
 
 つづく...
