--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -72,11 +72,11 @@ draft: false
 但是事情不能就此block住。  
 
 **先分析问题：**  
-目的是把美术成本压倒最低，换句话说就是制作一个画面简单但功能齐全的游戏，
+目的是把美术成本压到最低，换句话说就是制作一个画面简单但功能齐全的游戏，
 
-**怎样的画面是简单但是可接受的呢？** 
-最开始想像素风，但是像素艺术其实比想象中更难，我的美术能力感觉真是令人发指。
-简笔画的风格也有考虑过，脑洞也开到过模拟一个上课的桌面世界，笔记本上的简笔画世界，不过这个想法也被抛弃了。
+**怎样的画面是简单但是可接受的呢？**  
+最开始想像素风，但是像素艺术其实比想象中更难，我的美术能力感觉真是令人发指。  
+简笔画的风格也有考虑过，脑洞也开到过模拟一个上课的桌面世界，笔记本上的简笔画世界，不过这个想法也被抛弃了。  
 
 有一天突然想到了做ASCII字符风格。用单纯的字符拼成表情，这是我最开始上网时候就接触到的形式，也是第一代的emoji。
 至于拿字符拼成各个怪物什么的对我来说还是可以制作的，基本上都是纯脑洞的过程。
@@ -89,12 +89,12 @@ draft: false
 
 那么方向就定下来了。
 
-现在回头看这段，其实属于一个大坑。之后在美术方面折腾了巨大的时间。
-扯了上面那么多，最终结果其实也只是一个programmer art而已
+现在回头看这段，其实属于一个大坑。之后在美术方面折腾了巨大的时间。  
+扯了上面那么多，最终结果其实也只是一个programmer art而已  
 这里可以顺便回答一个问题：为什么不找专业美术。
 
-首先，我太抠门
-其次，在整体框架没有完成之前，并不敢投入成本
+首先，我太抠门  
+其次，在整体框架没有完成之前，并不敢投入成本  
 
 经过这次之后，这应该是我最后一个自己做美术的游戏了……（喂，话不要说得太死~~）
 
@@ -105,7 +105,6 @@ draft: false
 1. 现在各游戏平台环境恶化的比想象中厉害的多。Appstore, googleplay这种已经沦为垃圾市场的平台自不用说，steam目前也恶化的差不多了。基本上快沦为国内手游的拼投钱刷量的纯数字游戏了，于是基本想法是能上的平台尽量上。Switch目前还是一个新的平台，外加老任门槛限制的厉害，环境相对好一些（能好多久……）
 
 2. 就是准入，这里要多谢FantasyDR同学帮忙发行到Switch，不然以我个人之力和这个游戏的质量是不敢想象的，纯卖脸，多谢多谢~~
-
 
 以上可以看到原因都是非常市侩的成本，实现，收益考量，这和我一直对于创作的信念有关：
 “如果创作不是为了收益，那么和嫖娼没有区别——不过是花钱买个爽而已”
