--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -119,11 +119,11 @@ draft: false
 制作过程中，除了把内容制作出来，还边考虑了几个问题，之后的项目前期基本上都是在解决这些问题。
 而最后的成品其实和DEMO已经完全不同
 
-在DEMO制作时，我就已经在考虑之后要解决的问题，暂且称作“项目预备”吧。不过这些问题都充满了技术臭い，都是以完成项目为导向，这个虽然保证了项目之后的推进顺利，但是也埋下了缺乏polish的坑……
+在DEMO制作时，我就已经在考虑之后要解决的问题，暂且称作“项目预备”吧。不过这些问题都充满了技术臭い，都是以完成项目为导向，这虽然保证了项目之后的推进顺利，但是也埋下了缺乏polish的坑……
 
 之后也就进入了项目前期研发阶段。
 
 これから、项目正式开始...
 
 
-つづく...
+つづく……
