--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -83,8 +83,9 @@ draft: false
 
 例如：
 
-*小坦克*  
+*小机器人*  
 
+![](/images/post/20190901_1_1.jpg)
 
 
 那么方向就定下来了。
@@ -114,7 +115,7 @@ draft: false
 制作DEMO主要是验证想法和看下实现难度为主。
 整个过程不长，大约两周左右就制作出来了第一个版本:
 
-
+![](/images/post/20190901_1_2.png)
 
 制作过程中，除了把内容制作出来，还边考虑了几个问题，之后的项目前期基本上都是在解决这些问题。
 而最后的成品其实和DEMO已经完全不同
