--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -105,7 +105,7 @@ draft: false
 
 1. 现在各游戏平台环境恶化的比想象中厉害的多。Appstore, googleplay这种已经沦为垃圾市场的平台自不用说，steam目前也恶化的差不多了。基本上快沦为国内手游的拼投钱刷量的纯数字游戏了，于是基本想法是能上的平台尽量上。Switch目前还是一个新的平台，外加老任门槛限制的厉害，环境相对好一些（能好多久……）
 
-2. 就是准入，这里要多谢FantasyDR同学帮忙发行到Switch，不然以我个人之力和这个游戏的质量是不敢想象的，纯卖脸，多谢多谢~~
+2. 准入门槛，这里要多谢FantasyDR同学帮忙发行到Switch，不然以我个人之力和这个游戏的质量是不敢想象的，纯卖脸，多谢多谢~~
 
 以上可以看到原因都是非常市侩的成本，实现，收益考量，这和我一直对于创作的信念有关：
 “如果创作不是为了收益，那么和嫖娼没有区别——不过是花钱买个爽而已”
