--- a/content/post/20190901_1.md
+++ b/content/post/20190901_1.md
@@ -5,7 +5,7 @@ date: 2019-09-01T18:44:54+08:00
 draft: false
 ---
 
-这是一系列伪装成复盘分享文章的硬广。
+这是一篇伪装成复盘分享文章的硬广。
 
 <!--more-->
 
@@ -107,7 +107,7 @@ draft: false
 
 2. 准入门槛，这里要多谢FantasyDR同学帮忙发行到Switch，不然以我个人之力和这个游戏的质量是不敢想象的，纯卖脸，多谢多谢~~
 
-以上可以看到原因都是非常市侩的成本，实现，收益考量，这和我一直对于创作的信念有关：
+以上可以看到原因都是非常市侩的成本，实现，收益考量，这和我一直对于创作的信念有关：  
 “如果创作不是为了收益，那么和嫖娼没有区别——不过是花钱买个爽而已”
 
 
@@ -124,7 +124,7 @@ draft: false
 
 之后也就进入了项目前期研发阶段。
 
-これから、项目正式开始...
+これから、项目正式开始。
 
 
 つづく……
