--- a/content/post/20191008_1.md
+++ b/content/post/20191008_1.md
@@ -45,14 +45,15 @@ steam商店已经开放：
 
 ### 1. 基础模块  
 基础模块基本上包括了  
-> 1. 本地化  
-> 2. 音效
-> 3. 资源管理  
-> 4. 关卡管理  
-> 5. 怪物基础类  
-> 6. 玩家基础类  
-> 7. 物理相关  
-> ...
+
+>1 本地化    
+>2 音效  
+>3 资源管理    
+>4 关卡管理  
+>5 怪物基础类    
+>6 玩家基础类    
+>7 物理相关    
+>...  
 
 其中有部分直接复用了之前所作的游戏的模块，有的则是从demo中正式化而来。  
 其中物理部分碰撞则是用的unity的collider，但是移动跳跃等则完全和demo不同。  
