--- a/content/post/20191008_1.md
+++ b/content/post/20191008_1.md
@@ -138,7 +138,9 @@ CRT效果也是在这时加入的。
 
 之后会和大家分享一下开发的项目流程管理的心得，毕竟我对这次项目推进还是比较满意（除了polish部分，能力有限唉），以及使用的开发工具等。
 
-最后附上在车上绘制的关卡草图，我好想要个ipad pro哈哈
+最后附上在车上绘制的关卡草图，我好想要个ipad pro哈哈  
+
+![](/images/post/20191008_1_1.jpg)
 
 
 つづく……
