--- a/content/post/20191008_1.md
+++ b/content/post/20191008_1.md
@@ -32,9 +32,9 @@ draft: false
 
 剧情讲述个996到崩溃边缘的程序员，恍惚中进入梦乡（上班睡觉罪该万死），化作一个绿色的光标，并得到许诺称只要找到代码里面的4个bug就可以下班回家的故事。
 
-本游戏将于2019年秋季发售，目标平台是steam和switch。
+本游戏将于2019年10月10日在steam和NS平台同步发售
 
-steam商店已经开放：
+steam商店已经开放： [steam商店](https://store.steampowered.com/app/1068120/CrunchTime/)
 
 好了，说完本文最重要的硬广部分，开始和大家分享一下在制作这款游戏中的状态，坑等，算是个复盘文章。
 
